# Compliance-Copilot-for-Clinics

./: .gitignore  main.py  package.json  pyproject.toml
api/src/mce_api/: main.py
apps/api/: pyproject.toml
apps/api/src/mce_api/: main.py
apps/cli/: pyproject.toml
docker/: pyproject.toml
docker/src/docker/: __init__.py
docs/: architecture-runbook.md
graph/: pyproject.toml
graph/src/graph/: __init__.py
ingestor/: main.py  pyproject.toml
ingestor/src/mce_ingestor/: main.py
rag/: pyproject.toml
rag/src/mce_rag/: main.py
