[project]
name = "mce-ingestor"
version = "0.1.0"
description = "CLI: parse PDFs/HTML, chunk, embed, upsert to Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "graph"]

[project.scripts]
mce-ingestor = "mce_ingestor.main:main"


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mce_ingestor"]