[project]
name = "mce-api"
version = "0.1.0"
description = "FastAPI service using local packages"
readme = "README.md"
requires-python = ">=3.11"

# Runtime deps:
# - fastapi: web framework
# - uvicorn: ASGI server
# - graph: local shared lib via path (note the ../../ from apps/api to root/graph)

dependencies = [
"fastapi>=0.112",
"uvicorn>=0.30",
"graph"

]

# Console script entry point:
# Creates a command `mce-api` that calls `run()` in apps/api/main.py
[project.scripts]
mce-api = "mce_api.main:run"

# =========================
# Build backend declaration
# =========================

[build-system]
requires = ["hatchling>=1.25"]  # Build tool requirement
build-backend = "hatchling.build" # Backend used to build/editable install

# Tell Hatchling which package directory to include in the wheel
[tool.hatch.build.targets.wheels]
packages = ["src/mce_api"]

# ===============================
# Dev-only dependency groups (uv)
# ===============================

[dependency-groups]
# httpx: HTTP client for integration tests
# pytest-asyncio: async test support for FastAPI

dev = ["ruff", "pytest", "mypy", "httpx", "pytest-asyncio"]

